--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.6.8",
     "react": "^17.0.2",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.2",
+    "react-gsap": "^3.2.1",
+    "react-lorem-ipsum": "^1.4.10",
+    "react-responsive-carousel": "^3.2.23",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
+    "react-simple-image-slider": "^2.4.0",
+    "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
